Update MainActivity.java
Fix