@@ -1,8 +1,10 @@
 package com.hk.hkterminal;
 
+import android.Manifest;
 import android.content.pm.ApplicationInfo;
 import android.content.pm.PackageManager;
 import android.os.Bundle;
+import android.speech.tts.TextToSpeech;
 import android.view.*;
 import android.widget.*;
 import androidx.annotation.NonNull;
@@ -13,6 +15,7 @@ import com.google.android.material.tabs.TabLayout;
 import com.google.android.material.tabs.TabLayoutMediator;
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
+import java.util.Locale;
 import java.util.List;
 
 public class MainActivity extends AppCompatActivity {
@@ -21,12 +24,23 @@ public class MainActivity extends AppCompatActivity {
     private TabLayout tabLayout;
     private EditText inputCommand;
     private Button runButton;
-    private static TextView globalOutputView; // To update from MainActivity
+    private static TextView globalOutputView;
+    private TextToSpeech alexVoice;
 
     @Override
     protected void onCreate(Bundle savedInstanceState) {
         super.onCreate(savedInstanceState);
         setContentView(R.layout.activity_main);
+
+        // Professional Permission Check [cite: 2026-02-01]
+        if (checkSelfPermission(Manifest.permission.RECORD_AUDIO) != PackageManager.PERMISSION_GRANTED) {
+            requestPermissions(new String[]{Manifest.permission.RECORD_AUDIO, Manifest.permission.WRITE_EXTERNAL_STORAGE}, 101);
+        }
+
+        // Initialize Alex (Speaker Option)
+        alexVoice = new TextToSpeech(this, status -> {
+            if (status != TextToSpeech.ERROR) alexVoice.setLanguage(Locale.UK);
+        });
 
         viewPager = findViewById(R.id.viewPager);
         tabLayout = findViewById(R.id.tabLayout);
@@ -41,7 +55,7 @@ public class MainActivity extends AppCompatActivity {
         runButton.setOnClickListener(v -> {
             String cmd = inputCommand.getText().toString().trim();
             if (!cmd.isEmpty() && globalOutputView != null) {
-                globalOutputView.append("\n# " + cmd + "\n");
+                globalOutputView.append("\nroot@pshacker:~# " + cmd + "\n");
                 executeCommand(cmd);
                 inputCommand.setText("");
             }
@@ -49,19 +63,24 @@ public class MainActivity extends AppCompatActivity {
     }
 
     private void executeCommand(String command) {
-        try {
-            // Real Shell Execution
-            Process process = new ProcessBuilder(command.split(" ")).redirectErrorStream(true).start();
-            BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
-            
-            String line;
-            while ((line = reader.readLine()) != null) {
-                String finalLine = line;
-                runOnUiThread(() -> globalOutputView.append(finalLine + "\n"));
+        new Thread(() -> {
+            try {
+                // Real Engine Execution
+                Process process = Runtime.getRuntime().exec(command);
+                BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
+                String line;
+                while ((line = reader.readLine()) != null) {
+                    String finalLine = line;
+                    runOnUiThread(() -> {
+                        globalOutputView.append(finalLine + "\n");
+                        // Alex speaks the output
+                        alexVoice.speak(finalLine, TextToSpeech.QUEUE_ADD, null, null);
+                    });
+                }
+            } catch (Exception e) {
+                runOnUiThread(() -> globalOutputView.append("[DENIED]: Check Root/Permissions\n"));
             }
-        } catch (Exception e) {
-            runOnUiThread(() -> globalOutputView.append("[ERROR]: " + e.getMessage() + "\n"));
-        }
+        }).start();
     }
 
     private class TerminalPagerAdapter extends FragmentStateAdapter {
@@ -75,17 +94,15 @@ public class MainActivity extends AppCompatActivity {
     public static class TabFragment extends androidx.fragment.app.Fragment {
         int type;
         public TabFragment(int type) { this.type = type; }
-        
         @Override
         public View onCreateView(@NonNull LayoutInflater inflater, ViewGroup container, Bundle savedInstanceState) {
             if (type == 0) {
                 ScrollView sv = new ScrollView(getContext());
                 TextView tv = new TextView(getContext());
-                tv.setText(">> SYSTEM READY, PRASHANT BHAI...\n");
+                tv.setText(">> SYSTEM READY, PRASHANT BHAI...\n>> SPEAKER ACTIVE\n");
                 tv.setTextColor(0xFF00FF00);
-                tv.setPadding(20, 20, 20, 20);
                 tv.setTypeface(android.graphics.Typeface.MONOSPACE);
-                tv.setTextIsSelectable(true); // FIX: Copy/Paste enable
+                tv.setTextIsSelectable(true); // Fix for Copy/Paste
                 globalOutputView = tv;
                 sv.addView(tv);
                 sv.setBackgroundColor(0xFF000000);
@@ -104,18 +121,9 @@ public class MainActivity extends AppCompatActivity {
                 List<ApplicationInfo> apps = pm.getInstalledApplications(0);
                 String[] names = new String[apps.size()];
                 for (int i = 0; i < apps.size(); i++) {
-                    names[i] = "[INSTALLED]: " + apps.get(i).packageName;
+                    names[i] = " > " + apps.get(i).packageName;
                 }
-                ArrayAdapter<String> adapter = new ArrayAdapter<String>(getContext(), android.R.layout.simple_list_item_1, names) {
-                    @Override public View getView(int position, View convertView, ViewGroup parent) {
-                        View view = super.getView(position, convertView, parent);
-                        TextView text = view.findViewById(android.R.id.text1);
-                        text.setTextColor(0xFF00FF00);
-                        text.setTextSize(12);
-                        return view;
-                    }
-                };
-                lv.setAdapter(adapter);
+                lv.setAdapter(new ArrayAdapter<>(getContext(), android.R.layout.simple_list_item_1, names));
             } catch (Exception e) {}
         }
     }
